k8s-app/vote-app-alb/result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: hanhorang.link
spec:
  rules:
    - http:
        paths:
          - path: /result
            pathType: Prefix
            backend:
              service:
                name: result
                port:
                  number: 5001
